Source/WebKit/chromium/public/WebViewClient.h
@@ -37,7 +37,6 @@
 #include "WebEditingAction.h"
 #include "WebFileChooserCompletion.h"
 #include "WebFileChooserParams.h"
-#include "WebHitTestResult.h"
 #include "WebPageVisibilityState.h"
 #include "WebPopupType.h"
 #include "WebTextAffinity.h"
@@ -64,6 +63,7 @@ class WebFrame;
 class WebGeolocationClient;
 class WebGeolocationService;
 class WebHelperPlugin;
+class WebHitTestResult;
 class WebIconLoadingCompletion;
 class WebImage;
 class WebInputElement;
@@ -374,9 +374,8 @@ public:
 
     // Retrieves detectable content (e.g., email addresses, phone numbers)
     // around a hit test result. The embedder should use platform-specific
-    // content detectors (e.g., from the Android intent system) to analyze the
-    // region around the hit test result.
-    virtual WebContentDetectionResult detectContentIntentAround(const WebHitTestResult&) { return WebContentDetectionResult(); }
+    // content detectors to analyze the region around the hit test result.
+    virtual WebContentDetectionResult detectContentAround(const WebHitTestResult&) { return WebContentDetectionResult(); }
 
     // Schedules a new content intent with the provided url.
     virtual void scheduleContentIntent(const WebURL&) { }
